--- a/TextileResearchDevelopment/Views/AopPrint/Index.cshtml
+++ b/TextileResearchDevelopment/Views/AopPrint/Index.cshtml
@@ -299,7 +299,7 @@
                                         <div class="form-group col-xs-4 form-inline">
                                             <label for="SoftenerGLSL" class="control-label" style="width:35%;">Softener GL</label>
                                             <div style="display: inline;">
-                                                <input type="text" class="typeahead form-control" style="width:60%;" id="BatchNoSL" name="SoftenerGLSL" placeholder="Softener GL">
+                                                <input type="text" class="typeahead form-control" style="width:60%;" id="SoftenerGLSL" name="SoftenerGLSL" placeholder="Softener GL">
                                             </div>
                                         </div>
                                     </div>
