--- a/TextileResearchDevelopment/Views/TestReport/Index.cshtml
+++ b/TextileResearchDevelopment/Views/TestReport/Index.cshtml
@@ -183,7 +183,7 @@
                                         <div class="form-group col-xs-4 form-inline">
                                             <label for="BlowerSL" class="control-label" style="width:35%;">Blower</label>
                                             <div style="display: inline;">
-                                                <input type="text" class="typeahead form-control" style="width:60%;" id="BlowerSL" name="SoftenerGLSL" placeholder="Blower">
+                                                <input type="text" class="typeahead form-control" style="width:60%;" id="BlowerSL" name="BlowerSL" placeholder="Blower">
                                             </div>
                                         </div>
                                         <div class="form-group col-xs-4 form-inline">
