--- a/TextileResearchDevelopment/Views/TestReport/Index.cshtml
+++ b/TextileResearchDevelopment/Views/TestReport/Index.cshtml
@@ -340,7 +340,7 @@
                     <div class="form-group col-xs-4 form-inline">
                         <label for="GreyWidth" class="control-label" style="width:35%;">Grey Width</label>
                         <div style="display: inline;">
-                            <input type="number" class="form-control" style="width:60%;" id="GreyWidth" min="0" step="1" autofocus readonly>
+                            <input type="number" class="form-control" style="width:60%;" id="GreyWidth"  autofocus readonly>
                         </div>
                     </div>
                 </div>
@@ -348,7 +348,7 @@
                     <div class="form-group col-xs-4 form-inline">
                         <label for="GreyGSM" class="control-label" style="width:35%;">Grey GSM</label>
                         <div style="display: inline;">
-                            <input type="number" class="form-control" style="width:60%;" id="GreyGSM" min="0" step="1" data-bind="value:GreyGSM" placeholder="Grey GSM" autofocus readonly>
+                            <input type="number" class="form-control" style="width:60%;" id="GreyGSM"  autofocus readonly>
                         </div>
                     </div>
                     <div class="form-group col-xs-4 form-inline">
@@ -360,7 +360,7 @@
                     <div class="form-group col-xs-4 form-inline">
                         <label for="BatchNo" class="control-label" style="width:35%;">Batch No</label>
                         <div style="display: inline;">
-                            <input type="text" class="form-control" style="width:60%;" id="BatchNo" placeholder="Batch No" autofocus readonly>
+                            <input type="text" class="form-control" style="width:60%;" id="BatchNo"  autofocus readonly>
                         </div>
                     </div>
                 </div>
@@ -368,19 +368,19 @@
                     <div class="form-group col-xs-4 form-inline">
                         <label for="SoftenerName" class="control-label" style="width:35%;">Softener Name</label>
                         <div style="display: inline;">
-                            <input type="text" class="form-control" style="width:60%;" id="SoftenerName" placeholder="Softener Name" autofocus readonly>
+                            <input type="text" class="form-control" style="width:60%;" id="SoftenerName" autofocus readonly>
                         </div>
                     </div>
                     <div class="form-group col-xs-4 form-inline">
                         <label for="PrintUnit" class="control-label" style="width:35%;">Print Type</label>
                         <div style="display: inline;">
-                            <input type="text" class="form-control" style="width:60%;" id="PrintUnit"  placeholder="Print Type" required autofocus readonly>
+                            <input type="text" class="form-control" style="width:60%;" id="PrintUnit"  autofocus readonly>
                         </div>
                     </div>
                     <div class="form-group col-xs-4 form-inline">
                         <label for="MachineUnit" class="control-label" style="width:35%;">Machine Type</label>
                         <div style="display: inline;">
-                            <input type="text" class="form-control" style="width:60%;" id="MachineUnit"  placeholder="Machine Type" required autofocus readonly>
+                            <input type="text" class="form-control" style="width:60%;" id="MachineUnit"  autofocus readonly>
                         </div>
                     </div>
                 </div>
