--- a/TextileResearchDevelopment/Views/Knitting/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Knitting/Index.cshtml
@@ -32,6 +32,7 @@
     <ul id="MainContextMenu" class="dropdown-menu" role="menu" style="display:none">
         <li><a tabindex="-1" href="#">Delete</a></li>
         <li><a tabindex="-1" href="#">Approve</a></li>
+        <li><a tabindex="-1" href="#">Unapprove</a></li>
     </ul>
 
     <div class="modal fade" id="modalDiaGauge" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -269,7 +270,7 @@
                                         <div class="form-group col-xs-4 form-inline">
                                             <label for="BarCodeSL" class="control-label" style="width:35%;">BarCode</label>
                                             <div style="display: inline;">
-                                                <input type="text" class=" form-control" style="width:60%;" id="BarCodeSL" placeholder="Bar Code" autofocus>
+                                                <input type="number" class=" form-control" style="width:60%;" id="BarCodeSL" min="0" step="1" data-bind="value:BarCodeSL" placeholder="Bar Code" autofocus>
                                             </div>
                                         </div>
                                         <div class="form-group col-xs-4 form-inline">
@@ -310,20 +311,7 @@
                                             <input type="checkbox" id="DeliveryDateCheckBox" style="width:5%;">
                                             <label for="DeliveryDateSL" class="control-label" style="width:30%;">Delivery Date</label>
                                             <div class='input-group date' id='DeliveryDateSL' style="width:60%;">
-                                                <input type='text' class="form-control" id="DeliveryDateTextSL" placeholder="Delivey Date" disabled autofocus />
-                                                <span class="input-group-addon">
-                                                    <span class="glyphicon glyphicon-calendar"></span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                        <div class="form-group col-xs-4 form-inline">
-                                            <input type="checkbox" id="FabricOrderDateCheckBox" style="width:5%;">
-                                            <label for="FabricOrderDateSL" class="control-label" style="width:30%;">Order Date</label>
-                                            <div class='input-group date' id='FabricOrderDateSL' style="width:60%;">
-                                                <input type='text' class="form-control" id="FabricOrderDateTextSL" placeholder="Fabric Order Date" disabled autofocus />
-                                                <span class="input-group-addon">
-                                                    <span class="glyphicon glyphicon-calendar"></span>
-                                                </span>
+                                                <input type='text' class="form-control" id="DeliveryDateTextSL" disabled placeholder="Delivey Date" autofocus />
                                             </div>
                                         </div>
                                         <div class="form-group col-xs-4 form-inline">
@@ -335,7 +323,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <table id="fabricSelectionTable" class="stripe hover order-column" style="width: 100%">
+                            <table id="fabricSelectionTable" class="display nowrap stripe hover order-column" style="width: 100%">
                                 <thead>
                                     <tr>
                                         <th>Id</th>
@@ -520,7 +508,7 @@
         </div>
     </div>
 
-    <table id="knitTable" class="stripe hover order-column " style="width: 200px;">
+    <table id="knitTable" class="display nowrap stripe hover order-column " style="width: 200px;">
         <thead>
             <tr>
                 <th></th>
@@ -609,6 +597,35 @@
         var BrandTable = $('#BrandTable').DataTable();
         var DiaGaugeTable = $('#DiaGaugeTable').DataTable();
 
+        $('#DeliveryDateTextSL').daterangepicker({
+            locale: {
+                format: 'DD/MM/YY'
+            }
+        });
+
+        $('input[type=number]').keydown(function (event) {
+            debugger;
+            if (event.shiftKey) {
+                event.preventDefault();
+            }
+
+            if (event.keyCode == 46 || event.keyCode == 8 || event.keyCode == 110) {
+
+            }
+            else {
+                if (event.keyCode < 95) {
+                    if (event.keyCode < 48 || event.keyCode > 57) {
+                        event.preventDefault();
+                    }
+                }
+                else {
+                    if (event.keyCode < 96 || event.keyCode > 105) {
+                        event.preventDefault();
+                    }
+                }
+            }
+        });
+
         $('input.typeahead').keydown(function () {
             ColId = $(this).attr('id');
         });
@@ -678,11 +695,6 @@
 
             };
         })(jQuery, window);
-
-        $('#DeliveryDateSL, #FabricOrderDateSL').datetimepicker({
-            defaultDate: new Date(),
-            format: 'DD/MM/YYYY'
-        });
 
         loadMCDIAList();
 
@@ -983,7 +995,17 @@
         });
 
         var knitTable = $('#knitTable').DataTable({
+            dom: 'Bfrtip',
+            buttons: [
+                {
+                    extend: 'excelHtml5',
+                    exportOptions: {
+                        columns: ':visible'
+                    }
+                },
 
+                'colvis'
+            ],
             "ajax":
             {
                 "url": "/Knitting/GetData",
@@ -1102,6 +1124,7 @@
                 $(this).toggleClass('selected');
 
                 var rowdata = knitTable.row(this).data();
+                Reset();
 
                 if (knitTable.data().any()) {
                     Setvalue(rowdata);
@@ -1217,8 +1240,7 @@
                     data: JSON.stringify({ BarCode: barCode }),
                     success: function (response) {
                         debugger
-                        if (response == "true")
-                        {
+                        if (response == "true") {
                             var fabricSearchObj = {
                                 BarCode: $("#BarCodeSL").val().toString(),
                                 BuyerID: $("#BuyerSL option:selected").val(),
@@ -1226,8 +1248,8 @@
                                 OrderNo: $("#OrderNoSL").val().length > 0 ? $("#OrderNoSL").val().toString() : '',
                                 Color: $("#ColorSL").val().length > 0 ? $("#ColorSL").val().toString() : '',
                                 ChallanNo: $("#ChallanSL").val().length > 0 ? $("#ChallanSL").val().toString() : '',
-                                DeliveryDate: $('#DeliveryDateCheckBox').is(":checked") == true ? $("#DeliveryDateTextSL").val().toString() : '',
-                                CreateTime: $('#FabricOrderDateCheckBox').is(":checked") == true ? $("#FabricOrderDateTextSL").val().toString() : '',
+                                DeliveryDateStart: $('#DeliveryDateCheckBox').is(":checked") == true ? $('#DeliveryDateTextSL').data('daterangepicker').startDate.format('DD/MM/YYYY') : '',
+                                DeliveryDateEnd: $('#DeliveryDateCheckBox').is(":checked") == true ? $('#DeliveryDateTextSL').data('daterangepicker').endDate.format('DD/MM/YYYY') : '',
                             };
 
                             $.ajax({
@@ -1252,10 +1274,10 @@
                             });
                         }
                         if (response == "false") {
-                            alert("This Barcode is already used in another knit order!!!");
+                            alert("This Barcode may be already used in another knit order!!!");
                             return;
                         }
-                        if (response == ""  || response == null){
+                        if (response == "" || response == null) {
                             alert("Connection problem!!!");
                             return;
                         }
@@ -1275,12 +1297,23 @@
 
         $("#FabricSelection").click(function () {
             event.preventDefault();
-            selectedFabricRowId = 0;
+
+            selectedFabricRowId = 0; ResetFabric(); fabricSelectionTable.clear().draw();
 
             loadBuyerList();
 
             fabricSelectionTable = $('#fabricSelectionTable').DataTable({
-                "dom": 'Bfrtip',
+                dom: 'Bfrtip',
+                buttons: [
+                    {
+                        extend: 'excelHtml5',
+                        exportOptions: {
+                            columns: ':visible'
+                        }
+                    },
+
+                    'colvis'
+                ],
                 "scrollY": true,
                 "scrollX": true,
                 "Sorting": true,
@@ -1322,6 +1355,10 @@
                 ]
             });
 
+        });
+
+        $("#resetFabricBtn").click(function () {
+            ResetFabric();
         });
 
         $("#okayBtn").click(function () {
@@ -2074,9 +2111,45 @@
             });
         }
 
+        function UnapproveRow() {
+            debugger
+            event.preventDefault();
+
+            var KnitRow = knitTable.rows('.selected').data()[0];
+            var index = knitTable.row('.selected').index();
+
+            var knitObj =
+            {
+                Id: KnitRow.Id
+            };
+
+            $.ajax({
+                type: "POST",
+                url: "/Knitting/Unapprove",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                data: JSON.stringify(knitObj),
+                success: function (response) {
+                    debugger
+                    if (response.data != "" && response.data != null) {
+                        debugger
+                        knitTable.row(index).data(response.data).draw();
+                        Reset();
+                    }
+                    else {
+                        alert("Failed to Unapprove!!!");
+                        return;
+                    }
+                },
+                failure: function () {
+                    $("#tblItems").append(" Error when fetching data please contact administrator");
+                }
+            });
+        }
+
         function ValidateFabricForm() {
             debugger;
-            if ($("#BarCodeSL").val() == "" && $("#BuyerSL option:selected").val() == "" && $("#FabricSL option:selected").val() == "" && $("#OrderNoSL").val() == "" && $("#ColorSL").val() == "" && $("#ChallanSL").val() == "" && $('#DeliveryDateCheckBox').is(":checked") == false && $('#FabricOrderDateCheckBox').is(":checked") == false) {
+            if ($("#BarCodeSL").val() == "" && $("#BuyerSL option:selected").val() == "" && $("#FabricSL option:selected").val() == "" && $("#OrderNoSL").val() == "" && $("#ColorSL").val() == "" && $("#ChallanSL").val() == "" && $('#DeliveryDateCheckBox').is(":checked") == false) {
                 return false;
             }
             else {
@@ -2113,6 +2186,17 @@
             $("#TumbleGSM").val("");
         }
 
+        function ResetFabric() {
+            $("#BarCodeSL").val("");
+            $("#OrderNoSL").val("");
+            $("#ColorSL").val("");
+            $("#ChallanNoSL").val("");
+            $("#FabricSL").val("");
+            $("#BuyerSL").val("");
+            $('#DeliveryDateCheckBox').prop('checked', false);
+            $('#DeliveryDateTextSL').prop('disabled', true);
+        }
+
         function Setvalue(rowdata) {
             $("#DiaGauge").val(rowdata.DiaGaugeID);
             $("#YarnCount").val(rowdata.YarnCountID);
@@ -2140,11 +2224,43 @@
                         DeleteRow();
                     if (selectedMenu.text() == "Approve")
                         ApproveRow();
+                    if (selectedMenu.text() == "Unapprove")
+                        alert("This order is not approved yet!!!")
 
                 }
                 else {
-                    alert("This order is already approved!!!");
-                    return;
+                    if (selectedMenu.text() == "Unapprove") {
+                        var knitObj =
+                        {
+                            Id: knitTable.rows('.selected').data()[0].Id
+                        };
+                        $.ajax({
+                            type: "POST",
+                            url: "/Knitting/CheckUnapproveEligibility",
+                            contentType: "application/json; charset=utf-8",
+                            dataType: "json",
+                            data: JSON.stringify(knitObj),
+                            success: function (response) {
+                                debugger
+                                if (response == "false") {
+                                    UnapproveRow();
+                                }
+                                else {
+                                    alert("This order is already used in Dyeing!!!");
+                                    return;
+                                }
+                            },
+                            failure: function () {
+                                $("#tblItems").append(" Error when fetching data please contact administrator");
+                            }
+                        });
+                    }
+                    else {
+                        alert("This order is already approved!!!");
+                        return;
+                    }
+
+
                 }
             }
         });
@@ -2155,15 +2271,6 @@
             }
             else {
                 $('#DeliveryDateTextSL').prop('disabled', true);
-            }
-        });
-
-        $('#FabricOrderDateCheckBox').change(function () {
-            if ($(this).is(":checked")) {
-                $('#FabricOrderDateTextSL').prop('disabled', false);
-            }
-            else {
-                $('#FabricOrderDateTextSL').prop('disabled', true);
             }
         });
 
